# SunEarthMoonTrajectorySimulation

./: CMakeLists.txt  README.md
src/: csv_output.c  csv_output.h  gl_trail.c  gl_trail.h  main.c  main_realtime.c  simulate.c  simulate.h
visualization/: .gitignore  README.md  plot_trajectories.py
